@@ -104,10 +104,13 @@ subprojects {
             }
         }
 
-        // tasks.withType<Test> {
-        //     jvmArgs("-XX:+EnableDynamicAgentLoading")
-        // }
-        test {
+        // test {
+        // tasks.named("test")
+        tasks.withType(Test).configureEach {
+            enabled = true
+            ignoreFailures = false
+            useJUnitPlatform()
+
             String mockitoFiles = configurations.mockitoAgent.asPath
 
             doFirst {
